<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoiceMoneyAddActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/white"
    >


    <ImageView
        android:id="@+id/image_main"
        android:layout_width="232dp"
        android:layout_height="192dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_tirelire"

        />

    <Button
        android:id="@+id/btn_add_billets"
        android:layout_width="283dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_btn_choices"
        android:drawableEnd="@drawable/ic_billets"
        android:fontFamily="@font/arlrdbd"
        android:padding="10dp"
        android:shadowColor="#00000000"
        android:shadowDx="1"
        android:shadowDy="2"
        android:text="@string/btn_ajt_billets"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_add_pieces"
        android:layout_width="283dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_btn_choices"
        android:drawableEnd="@drawable/ic_pieces"
        android:fontFamily="@font/arlrdbd"
        android:padding="10dp"
        android:shadowColor="#00000000"
        android:text="@string/btn_ajt_pieces"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_billets" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="305dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/arlrdbd"
        android:text="@string/titre1_fabmenu"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_main" />

</androidx.constraintlayout.widget.ConstraintLayout>